--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,32 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  check:
+  ubuntu-build:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+    docker:
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+    steps:
+      - checkout
+      - run:
+          name: "autoreconf"
+          command: "autoreconf --install"
+      - run:
+          name: "configure"
+          command: "./configure"
+      - run:
+          name: "make"
+          command: "make"
+      - run:
+          name: "simple test"
+          command: "./bin/simple-test.sh"
+      - run:
+          name: "install"
+          command: "make install"
+
+  ubuntu-test:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
@@ -29,10 +54,13 @@ jobs:
       - run:
           name: "check"
           command: "make check"
+      - run:
+          name: "distcheck"
+          command: "make distcheck"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  check-workflow:
+  test-workflow:
     jobs:
-      - check
+      - ubuntu-test
