Fix security warning in table resize unit tests

--- a/tests/unit/test_table_resize.template
+++ b/tests/unit/test_table_resize.template
@@ -115,10 +115,10 @@ static char *table_filename = "fixtures/test_table_resize.tbl";
                 );
 
                 if (values[j].expected != NULL) {
-                    ck_assert_msg(check != NULL, message);
-                    ck_assert_msg(strcmp(check, values[j].expected) == 0, message);
+                    ck_assert_msg(check != NULL, "%s", message);
+                    ck_assert_msg(strcmp(check, values[j].expected) == 0, "%s", message);
                 } else {
-                    ck_assert_msg(check == NULL, message);
+                    ck_assert_msg(check == NULL, "%s", message);
                 }
             }
         }
