--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       - checkout
       - run:
           name: "install missing packages"
-          command: "HOMEBREW_NO_AUTO_UPDATE=1 brew install pkg-config coreutils"
+          command: "HOMEBREW_NO_AUTO_UPDATE=1 brew install autoconf automake bison flex gcc make pkg-config"
       - run:
           name: "autoreconf"
           command: "autoreconf --install"
