Add results from unit tests to output

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,7 +79,9 @@ jobs:
           command: "make"
       - run:
           name: "check"
-          command: "make check"
+          command: "CK_XML_LOG_FILE_NAME=/tmp/test.xml make check"
+      - store_test_results:
+          path: "/tmp/test.xml"
       - run:
           name: "distcheck"
           command: "make distcheck"
