Revert "Add results from unit tests to output"
This reverts commit a1b7b0f83b77860c4d4d516459382e2a86555450.

Surprise.  libcheck doesn't generate XML that's compatible with CircleCI.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,9 +79,7 @@ jobs:
           command: "make"
       - run:
           name: "check"
-          command: "CK_XML_LOG_FILE_NAME=/tmp/test.xml make check"
-      - store_test_results:
-          path: "/tmp/test.xml"
+          command: "make check"
       - run:
           name: "distcheck"
           command: "make distcheck"
