Update build manifest to include missing test files (#126)

--- a/tests/legacy/Makefile.am
+++ b/tests/legacy/Makefile.am
@@ -1,3 +1,9 @@
 
+EXTRA_DIST = \
+	*.sh \
+	github-issue-* \
+	legacy-dir \
+	man-page-*
+
 check:
 	if [ -x $(top_builddir)/tests/legacy/test.sh ] ; then $(top_builddir)/tests/legacy/test.sh $(top_builddir)/src/detox ; else $(top_builddir)/src/detox -V ; $(top_builddir)/src/detox -L -v ; fi
