--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -45,5 +45,9 @@ check_PROGRAMS = $(TESTS)
 
 endif # WITH_CHECK
 
+EXTRA_DIST = \
+	fixtures \
+	unit_struct.h
+
 clean-local:
 	rm -f *.gcov *.gcno *.gcda
