--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ jobs:
       - checkout
       - run:
           name: "install missing packages"
-          command: "HOMEBREW_NO_AUTO_UPDATE=1 brew install autoconf automake bison check flex gcc make pkg-config"
+          command: "HOMEBREW_NO_AUTO_UPDATE=1 brew install autoconf automake bash bison check flex gcc make pkg-config"
       - run:
           name: "autoreconf"
           command: "autoreconf --install"
